--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-# Created by .ignore support plugin (hsz.mobi)
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/dist
+/.pnp
+.pnp.js
+package-lock.json
+
+# testing
+/coverage
+
+# production
+/dist
+/build
+/public/uploads
+/public/dokumen
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
