--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uno-api",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "simplify express router",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chornos13/uno-api.git"
@@ -17,5 +17,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chornos13",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^13.7.7",
+    "typescript": "^3.8.3"
+  }
 }
