--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uno-api",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "simplify express router",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chornos13/uno-api.git"
